# imt-ml

./: .copier-answers.yml  .gitignore  .tool-versions  README.md  Taskfile.yml  development.md  pyproject.toml  track_prediction_model_vocab.json
.github/workflows/: ci.yml
devtools/: lint.py
src/imt_ml/: README_EXPORT.md  dataset.py  distributed_launcher.py  export_track_data.py  models.py  reporting.py  tflite_export.py  tfrecord_reader.py  training.py
src/imt_ml/shared_types/: shared_types.py
